# ai_lab

./: .gitignore  CLAUDE.md  README.md
app/backend/: pyproject.toml
app/backend/app/: main.py
app/backend/app/adapters/: base.py  ollama.py  openai_compatible.py  registry.py  router.py
app/backend/app/config/: loader.py  views.py
app/backend/app/models/: chat.py  config.py  views.py
app/backend/app/persistence/: database.py  repositories.py
app/backend/app/routes/: chat.py  conversations.py  health.py  sources.py
app/backend/app/services/: chat.py  health.py  route_resolver.py
app/backend/config/: app_config.json  capabilities.json  endpoints.json  policies.json  routes.json  sources.json
app/backend/data/: ai_lab.db-shm  ai_lab.db-wal
app/backend/tests/: conftest.py  test_api_conversations.py  test_api_sources.py  test_chat_service.py  test_config_loader.py  test_persistence.py  test_route_resolver.py  test_views.py
app/frontend/src/: App.css  App.tsx  api.ts
app/frontend/src/components/: Composer.tsx  ConversationList.tsx  DiagnosticsPanel.tsx  MessageThread.tsx  RuntimeOptions.tsx  SourcePicker.tsx
docs/: initial_design.md  initial_plan.md  model_management_plan.md
