[project]
name = "ai-lab-backend"
version = "0.1.0"
description = "Multi-model chat backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "aiosqlite>=0.21",
    "httpx>=0.28",
    "sse-starlette>=2.0",
    "python-dotenv>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
